--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -74,6 +74,7 @@
     <Content Include="Vista\Login.aspx" />
     <Content Include="Vista\Staff.aspx" />
     <Content Include="Vista\VerActividades.aspx" />
+    <Content Include="Vista\EditarActividades.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +106,13 @@
     </Compile>
     <Compile Include="Vista\VerActividades.aspx.designer.cs">
       <DependentUpon>VerActividades.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\EditarActividades.aspx.cs">
+      <DependentUpon>EditarActividades.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\EditarActividades.aspx.designer.cs">
+      <DependentUpon>EditarActividades.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
