--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -71,10 +71,13 @@
     <Content Include="CSS\StyleSheet1.css" />
     <Content Include="Imagenes\imagen.png" />
     <Content Include="Vista\CrearActividad.aspx" />
+    <Content Include="Vista\CrearEvento.aspx" />
+    <Content Include="Vista\EditarEvento.aspx" />
     <Content Include="Vista\Login.aspx" />
     <Content Include="Vista\Staff.aspx" />
     <Content Include="Vista\VerActividades.aspx" />
     <Content Include="Vista\EditarActividades.aspx" />
+    <Content Include="Vista\VerEventos.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +88,20 @@
     </Compile>
     <Compile Include="Vista\CrearActividad.aspx.designer.cs">
       <DependentUpon>CrearActividad.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\CrearEvento.aspx.cs">
+      <DependentUpon>CrearEvento.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\CrearEvento.aspx.designer.cs">
+      <DependentUpon>CrearEvento.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\EditarEvento.aspx.cs">
+      <DependentUpon>EditarEvento.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\EditarEvento.aspx.designer.cs">
+      <DependentUpon>EditarEvento.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -113,6 +130,13 @@
     </Compile>
     <Compile Include="Vista\EditarActividades.aspx.designer.cs">
       <DependentUpon>EditarActividades.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\VerEventos.aspx.cs">
+      <DependentUpon>VerEventos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\VerEventos.aspx.designer.cs">
+      <DependentUpon>VerEventos.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
