--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -81,6 +81,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion\Conexion.cs" />
+    <Compile Include="Controlador\Controlador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vista\CrearActividad.aspx.cs">
       <DependentUpon>CrearActividad.aspx</DependentUpon>
