--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="Conexion\Conexion.cs" />
     <Compile Include="Controlador\Controlador.cs" />
+    <Compile Include="DTO\DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vista\CrearActividad.aspx.cs">
       <DependentUpon>CrearActividad.aspx</DependentUpon>
