--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -81,9 +81,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conexion\Conexion.cs" />
-    <Compile Include="Controlador\Controlador.cs" />
-    <Compile Include="DTO\DTO.cs" />
+    <Compile Include="Negocio\DAOBD.cs" />
+    <Compile Include="Negocio\Controlador.cs" />
+    <Compile Include="DTO1\DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vista\CrearActividad.aspx.cs">
       <DependentUpon>CrearActividad.aspx</DependentUpon>
