--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -81,6 +81,10 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modelo\Actividad.cs" />
+    <Compile Include="Modelo\Archivo.cs" />
+    <Compile Include="Modelo\Evento.cs" />
+    <Compile Include="Modelo\Staff.cs" />
     <Compile Include="Negocio\DAOBD.cs" />
     <Compile Include="Negocio\Controlador.cs" />
     <Compile Include="DTO1\DTO.cs" />
@@ -151,6 +155,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
