Agregar eventos, mostrar eventos correspondientes a las actividades, eliminar actividades y eventos

--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Negocio\DAOBD.cs" />
     <Compile Include="Negocio\Controlador.cs" />
     <Compile Include="DTO1\DTO.cs" />
+    <Compile Include="Negocio\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vista\CrearActividad.aspx.cs">
       <DependentUpon>CrearActividad.aspx</DependentUpon>
