--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -77,6 +77,7 @@
     <Content Include="Vista\Staff.aspx" />
     <Content Include="Vista\VerActividades.aspx" />
     <Content Include="Vista\EditarActividades.aspx" />
+    <Content Include="Vista\VerArchivos.aspx" />
     <Content Include="Vista\VerEventos.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -139,6 +140,13 @@
     </Compile>
     <Compile Include="Vista\EditarActividades.aspx.designer.cs">
       <DependentUpon>EditarActividades.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\VerArchivos.aspx.cs">
+      <DependentUpon>VerArchivos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\VerArchivos.aspx.designer.cs">
+      <DependentUpon>VerArchivos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\VerEventos.aspx.cs">
       <DependentUpon>VerEventos.aspx</DependentUpon>
