Pagina de inicio
Agregué una pag de inicio en donde salen las actividades en general
Agregué el boton de iniciar sesión que redirige a lo que ya teniamos antes (modulo admi)

--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -69,10 +69,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CSS\StyleSheet1.css" />
+    <Content Include="CSS\StyleSheet2.css" />
+    <Content Include="Imagenes\bombillo.png" />
     <Content Include="Imagenes\imagen.png" />
     <Content Include="Vista\CrearActividad.aspx" />
     <Content Include="Vista\CrearEvento.aspx" />
     <Content Include="Vista\EditarEvento.aspx" />
+    <Content Include="Vista\Inicio.aspx" />
     <Content Include="Vista\Login.aspx" />
     <Content Include="Vista\Staff-Actividad.aspx" />
     <Content Include="Vista\Staff.aspx" />
@@ -113,6 +116,13 @@
     </Compile>
     <Compile Include="Vista\EditarEvento.aspx.designer.cs">
       <DependentUpon>EditarEvento.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\Inicio.aspx.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\Inicio.aspx.designer.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
