--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -70,11 +70,13 @@
   <ItemGroup>
     <Content Include="CSS\StyleSheet1.css" />
     <Content Include="CSS\StyleSheet2.css" />
+    <Content Include="Imagenes\actividad.jpg" />
     <Content Include="Imagenes\bombillo.png" />
     <Content Include="Imagenes\imagen.png" />
     <Content Include="Vista\CrearActividad.aspx" />
     <Content Include="Vista\CrearEvento.aspx" />
     <Content Include="Vista\EditarEvento.aspx" />
+    <Content Include="Vista\InformacionActividad.aspx" />
     <Content Include="Vista\Inicio.aspx" />
     <Content Include="Vista\Login.aspx" />
     <Content Include="Vista\Staff-Actividad.aspx" />
@@ -116,6 +118,13 @@
     </Compile>
     <Compile Include="Vista\EditarEvento.aspx.designer.cs">
       <DependentUpon>EditarEvento.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\InformacionActividad.aspx.cs">
+      <DependentUpon>InformacionActividad.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\InformacionActividad.aspx.designer.cs">
+      <DependentUpon>InformacionActividad.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
