--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -81,6 +81,7 @@
     <Content Include="Vista\InformacionActividad.aspx" />
     <Content Include="Vista\Inicio.aspx" />
     <Content Include="Vista\Login.aspx" />
+    <Content Include="Vista\PRUEBA.aspx" />
     <Content Include="Vista\Staff-Actividad.aspx" />
     <Content Include="Vista\Staff.aspx" />
     <Content Include="Vista\VerActividades.aspx" />
@@ -148,6 +149,13 @@
     </Compile>
     <Compile Include="Vista\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\PRUEBA.aspx.cs">
+      <DependentUpon>PRUEBA.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Vista\PRUEBA.aspx.designer.cs">
+      <DependentUpon>PRUEBA.aspx</DependentUpon>
     </Compile>
     <Compile Include="Vista\Staff-Actividad.aspx.cs">
       <DependentUpon>Staff-Actividad.aspx</DependentUpon>
