Registrar participantes, cambios de interfaz y cambios en la base

--- a/Gestor-Actividades/Gestor-Actividades.csproj
+++ b/Gestor-Actividades/Gestor-Actividades.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Modelo\Archivo.cs" />
     <Compile Include="Modelo\Lista.cs" />
     <Compile Include="Modelo\Evento.cs" />
+    <Compile Include="Modelo\Participante.cs" />
     <Compile Include="Modelo\Staff.cs" />
     <Compile Include="Negocio\DAOBD.cs" />
     <Compile Include="Negocio\Controlador.cs" />
